--- a/templates/shop.html
+++ b/templates/shop.html
@@ -8,7 +8,7 @@
 		<div class="container">
 			<div class="row">
 
-				{% for product in products %}
+				{% for product in product_s %}
 					<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
