--- a/templates/common.html
+++ b/templates/common.html
@@ -33,10 +33,11 @@
 				<div class="collapse navbar-collapse" id="navbarsFurni">
 					<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
 						{% for k in pages %}
-								<li class="nav-item {% if nav == nav_lower %} active {% endif %}">
+							{% if k.page != "Cart" %}
+								<li class="nav-item {% if nav == k.page|lower %} active {% endif %}">
 									<a class="nav-link" href="/{% if k.page|lower == 'home' %}{% else %}{{k.page|lower}}/ {% endif %}">{{ k.page }}</a>
 								</li>
-							
+							{% endif %}
 						{% endfor %}
 
 						
@@ -220,9 +221,9 @@
 
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
-									<li><a href="#">Nordic Chair</a></li>
-									<li><a href="#">Kruzo Aero</a></li>
-									<li><a href="#">Ergonomic Chair</a></li>
+									{% for item in products %}
+										<li><a href="#">{{item.furniture_name}}</a></li>
+									{% endfor %}
 								</ul>
 							</div>
 						</div>
@@ -233,7 +234,7 @@
 				<div class="border-top copyright">
 					<div class="row pt-4">
 						<div class="col-lg-6">
-							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> Distributed By <a hreff="https://themewagon.com">ThemeWagon</a>  <!-- License information: https://untree.co/license/ -->
+							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://www.linkedin.com/in/joseph-indieka-234b63231/">Joseph I</a>   <!-- License information: https://untree.co/license/ -->
             </p>
 						</div>
 
