--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
 							<div class="pt-3">
 								<h3>{{item.furniture_name}}</h3>
 								<p>{{item.description}}</p>
-								<p><a href="#">Read More</a></p>
+								<p><a href="/view/{{item.id}}/">Read More</a></p>
 							</div>
 						</div>
 					</div>
