--- a/templates/services.html
+++ b/templates/services.html
@@ -57,7 +57,7 @@
 				<!-- Start Column 2 -->
 				{% for i in products %}
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="#">
+						<a class="product-item" href="/view/{{i.id}}/">
 							<img src="/media/{{ i.image }}" class="img-fluid product-thumbnail">
 							<h3 class="product-title">{{i.furniture_name}}</h3>
 							<strong class="product-price">${{i.price}}</strong>
