--- a/templates/shop.html
+++ b/templates/shop.html
@@ -11,7 +11,7 @@
 				{% for product in product_s %}
 					<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="#">
+						<a class="product-item" href="/view/{{product.id}}/">
 							<img src="http://127.0.0.1:8000/media/{{ product.image }}" class="img-fluid product-thumbnail">
 							<h3 class="product-title">{{ product.furniture_name }}</h3>
 							<strong class="product-price">${{ product.price }}</strong>
